kubernetes/nodejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels: { app: nodejs-app }
  template:
    metadata:
      labels: { app: nodejs-app }
    spec:
      containers:
      - name: nodejs-app
        image: 396913715368.dkr.ecr.ap-south-1.amazonaws.com/nodejs-app:latest
        ports:
        - containerPort: 5000
