kubernetes/nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: nodejs-app
  ports:
    - port: 80
      targetPort: 5000
